# server/account_book.go
@@ -21,6 +21,13 @@ func NewAccountBookServer(accountBookService *service.AccountBookService) *Accou
 }
 
 // Register -
+// @Summary	注册账本
+// @Tags 账本
+// @Param        account_book  body      model.AccountBook  true  "账本信息"
+// @Success	204
+// @Failure	400 {string}  string      "请求体异常"
+// @Failure	500 {string}  string      "服务端异常"
+// @Router		/api/v1/account-book [post]
 func (s *AccountBookServer) Register(c *gin.Context) {
 	req := model.AccountBook{}
 	if err := c.ShouldBind(&req); err != nil {
@@ -36,6 +43,13 @@ func (s *AccountBookServer) Register(c *gin.Context) {
 }
 
 // Merge -
+// @Summary	合并账本
+// @Tags 账本
+// @Param        account_book  body      model.MergeAccountBookReq  true  "账本id信息"
+// @Success	204
+// @Failure	400 {string}  string      "请求体异常"
+// @Failure	500 {string}  string      "服务端异常"
+// @Router		/api/v1/account-book/merge [post]
 func (s *AccountBookServer) Merge(c *gin.Context) {
 	req := model.MergeAccountBookReq{}
 	if err := c.ShouldBind(&req); err != nil {
@@ -51,6 +65,13 @@ func (s *AccountBookServer) Merge(c *gin.Context) {
 }
 
 // Get -
+// @Summary	获取账本
+// @Tags 账本
+// @Param        account_book  query      model.AccountBookReq  true  "账本id信息"
+// @Success	200 {object}  model.AccountBookResp "账本结果"
+// @Failure	400 {string}  string      "请求体异常"
+// @Failure	500 {string}  string      "服务端异常"
+// @Router		/api/v1/account-book [get]
 func (s *AccountBookServer) Get(c *gin.Context) {
 	req := model.AccountBookReq{}
 	if err := c.ShouldBind(&req); err != nil {
@@ -66,6 +87,13 @@ func (s *AccountBookServer) Get(c *gin.Context) {
 }
 
 // GetByID -
+// @Summary	获取账本
+// @Tags 账本
+// @Param        id  path      int  true  "账本id" format(uint)
+// @Success	200 {object}  model.AccountBookResp "账本结果"
+// @Failure	400 {string}  string      "请求体异常"
+// @Failure	500 {string}  string      "服务端异常"
+// @Router		/api/v1/account-book/:id [get]
 func (s *AccountBookServer) GetByID(c *gin.Context) {
 	accountBookID := c.Param("id")
 	abID, _ := common.String2Uint(accountBookID)
